--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,11 @@
 body {
   @apply font-neue tracking-tight bg-white dark:bg-black;
 }
+
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
